# WordBook

./: CMakeLists.txt
src/main/c/com/aquarius0715/wordbook/: Command.h  Data.h  File.h  Main.c  System.h  Util.h  a.out
src/main/c/com/aquarius0715/wordbook-vol2/: Command.h  Data.h  File.h  Main.c  System.h  Util.h
src/main/c/com/aquarius0715/実行結果/: コマンド:create wordbook [wordbook]  コマンド:delete from [wordbook] where [element]  コマンド:drop wordbook [wordbook]  コマンド:help  コマンド:insert into [wordbook] [elements]  コマンド:select from [wordbook]  コマンド:show wordbooks  コマンド:truncate wordbook [wordbook]  初回起動時  未知のコマンドが入力された時  終了時  起動時
