cmake_minimum_required(VERSION 3.17)
project(WordBook_Vol2 C)

set(CMAKE_C_STANDARD 99)

add_executable(WordBook_Vol2 src/main/c/com/aquarius0715/wordbook-vol2/Main.c src/main/c/com/aquarius0715/wordbook-vol2/Data.h src/main/c/com/aquarius0715/wordbook-vol2/Util.h src/main/c/com/aquarius0715/wordbook-vol2/Command.h src/main/c/com/aquarius0715/wordbook-vol2/System.h)